--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -10,7 +10,9 @@
     <p> This portfolio site is an exciting project.</p>
     <p> <img src="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This is an image of ALX Logo"></p>
     <h2>Portfolio Site with HTML</h2>
+    <p>I shall be building this portfolio site using HTML.</p>
     <h3>About the Portfolio </h3>
+    <p> The portfolio will be exploring my career endeavours.</p>
     
 </body>
 </html>
