--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>My First Ever Portfolio Site!</h1>
     <p> This portfolio site is an exciting project.</p>
-    <img src="link https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This is an image of ALX Logo">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This is an image of ALX Logo">
     <p> I am excited to build developer skills in the ForntEnd space.</p>
     <h2>Portfolio Site with HTML</h2>
     <p>I shall be building this portfolio site using HTML.</p>
