--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,8 +8,10 @@
 <body>
     <h1>My First Ever Portfolio Site!</h1>
     <p> This portfolio site is an exciting project.</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This is an image of ALX Logo">
-    <p> I am excited to build developer skills in the ForntEnd space.</p>
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+    <p> I am excited to build developer skills in the ForntEnd space.
+        <a href="file:///Users/dafrosambanga/Desktop/alx_sefe/My_First_Portfolio/html_basic/tweets.html">Link to my tweets html file</a>
+    </p>
     <h2>Portfolio Site with HTML</h2>
     <p>I shall be building this portfolio site using HTML.</p>
     <h3>About the Portfolio </h3>
