--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,7 +6,15 @@
     <title>This is my first portfolio.</title>
 </head>
 <body>
-    <h1>My First Ever Portfolio Site!</h1>
+  <header>
+    <ul>
+        <li><a href="file:///Users/dafrosambanga/Desktop/alx_sefe/My_First_Portfolio/html_basic/index.html">Home Index Page</a></li>
+        <li><a href="file:///Users/dafrosambanga/Desktop/alx_sefe/My_First_Portfolio/html_basic/tweets.html"> Tweets Page</a></li>
+    
+    </ul>
+  </header>
+<main>
+<ariticle>><h1>My First Ever Portfolio Site!</h1>
     <p> This portfolio site is an exciting project.</p>
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
     <p> I am excited to build developer skills in the ForntEnd space.
@@ -16,6 +24,10 @@
     <p>I shall be building this portfolio site using HTML.</p>
     <h3>About the Portfolio </h3>
     <p> The portfolio will be exploring my career endeavours.</p>
-    
+    <p>placeholder to add comment thread later</p>
+</ariticle>
+<aside></aside>
+</main>
+<footer><p>Dafrosa LadyTech- <a href="https://discord.com/channels/1232316761756401674/1404967954784976957" target="_blank">here</a>.</p></footer>
 </body>
 </html>
