updates on the my portfolio repo

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dafrosa Mbanga - Personal Portfolio</title>
+    <title>Personal Portfolio</title>
 </head>
 <body>
     <header>
-        <h1>Dafrosa Mbanga</h1>
+        <h1><p>Dafrosa Mbanga</p></h1>
         <p>We who cast mere stones must always be envisioning the cathedral- The Pragmatic Programmer</p>
       </header>
-      <nav>
-        <ul>
-          <li><a href="#introduction">Introduction</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+       <nav>
+          <ul>
+             <li><a href="#introduction">Introduction</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#about">About Me</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
       <section id="introduction">
         <h2>Introduction</h2>
         <p>
